0027568: Exception is thrown when a degenerated edge is added to a wire

Test cases for issue CR27568

Other methods of BRep_Tool corrected to ensure that output arguments are always initialized